# a-software-tool-in-various-languages

./: LICENSE  README.md  build.gradle
src/c++/: CMakeLists.txt  arguments.cpp  arguments.hpp  character_class.cpp  character_class.hpp  escape_sequences.cpp  escape_sequences.hpp  main.cpp  matcher.cpp  matcher.hpp  pattern_matcher.cpp  pattern_matcher.hpp  string_walker.hpp
src/clojure/: brumjs_find  brumjs_find.clj
src/docs/asciidoc/: article.adoc  break.adoc  cpp.adoc  index.adoc  introduction.adoc  pascal.adoc
src/docs/asciidoc/style/: theme-tweak.css
src/javascript/: brumjs_find.js
src/javascript/lib/: patternMatcher.js
